--- a/dev/junaid_hospital/views/patient.xml
+++ b/dev/junaid_hospital/views/patient.xml
@@ -12,6 +12,7 @@
                         <field name="is_child"/>
                         <field name="gender"/>
                         <field name="history"/>
+                        <field name="capitalized_name"/>
                     </group>
                 </sheet>
                 <div class="oe_chatter">
@@ -30,6 +31,7 @@
                 <field name="age"/>
                 <field name="gender"/>
                 <field name="history"/>
+                <field name="capitalized_name"/>
             </tree>
         </field>
     </record>
